--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body class="blue-light-theme">
+<body class="indigo-light-theme">
   <app-root>
     <div class="app-loader">
       <div class="spinner">
