--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>AngularClient</title>
@@ -7,7 +8,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body class="indigo-light-theme">
+
+<!-- <body class="indigo-light-theme"> -->
+<!-- <body class="blue-light-theme"> -->
+<!-- <body class="purple-dark-theme"> -->
+<!-- <body class="deeppurple-light-theme"> -->
+<body class="pink-dark-theme">
   <app-root>
     <div class="app-loader">
       <div class="spinner">
